threading way changed for backlog